# code-generation-system

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
common/: pyproject.toml
common/src/common/: config.py  logging.py  models.py
orchestrator/: Dockerfile  pyproject.toml
orchestrator/src/orchestrator/: activities.py  config.py  run_worker.py
orchestrator/src/orchestrator/workflows/: agent_workflow.py  main_workflow.py
sandbox/: Dockerfile  pyproject.toml  test_env.Dockerfile
sandbox/src/sandbox/: config.py  docker_manager.py  main.py
ui/: Dockerfile  pyproject.toml
ui/src/ui/: app.py  config.py  temporal_client.py
