# /orchestrator/pyproject.toml
[tool.poetry]
name = "orchestrator"
version = "1.0.0"
description = "Production-ready workflow orchestrator service using Temporal."
authors =
packages = [{ include = "orchestrator", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
temporalio = "^1.5.0"
httpx = "0.27.0"
# 依赖于重构后的common库
common = { path = "../common", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"